# Rust_Is_Great

./: .gitignore
CrabShell/: Cargo.toml
CrabShell/src/: enum.rs  grammar.rs  grammar_symbols.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  utils.rs
elevation/: README.md
elevation/bonk/: Cargo.toml
elevation/bonk/src/: Ball.rs  Game.rs  Ground.rs  SpaceVector.rs  lib.rs
elevation/grep_tool/: README.md
elevation/grep_tool/src/: main.rs
elevation/rogue/: Cargo.toml
elevation/rogue/src/: main.rs
elevation/text-based-game/: Cargo.toml
elevation/url-shortener/: .vimspector.json  Cargo.toml  Dockerfile  README.md  Rocket.toml  index.html
elevation/url-shortener-service/: Cargo.toml  Rocket.toml  index.html
elevation/url-shortener-service/database/: migrate.sql
elevation/url-shortener-service/src/: main.rs  url.rs  urls.rs
elevation/url-shortener/database/: database.sqlite
elevation/web-scraper/: Cargo.toml  README.md
elevation/web-scraper/src/: main.rs
first_cli_tool/: Cargo.toml
first_cli_tool/src/: main.rs
first_web_server/: Cargo.toml  error.html  index.html
first_web_server/src/: lib.rs  main.rs
ocr/: Cargo.toml
ocr/src/: main.rs
text-based-game/src/: main.rs
wasm-game-of-life/: &  Cargo.toml  LICENSE_MIT  README.md
wasm-game-of-life/pkg/: README.md  package.json  wasm_game_of_life.d.ts  wasm_game_of_life_bg.js  wasm_game_of_life_bg.wasm  wasm_game_of_life_bg.wasm.d.ts
wasm-game-of-life/src/: .lib.rs.swp  lib.rs
wasm-game-of-life/web/: index.html  index.js  package-lock.json  package.json  webpack.config.js
(+20 files in other folders)
