[package]
name = "first_cli_tool"
version = "0.1.0"
authors = ["Victor Cornille <victor.bolheme@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
homepage = "https://github.com/TheSacredConqueror"
repository = "https://github.com/TheSacredConqueror/Rust_Is_Great/tree/main/first_cli_tool"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
src = "0.0.6"
