[package]
name = "web-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
colored = "2.1.0"
futures = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12.3", features = ["json"] }
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full"] }
